// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/app/libs/utils filterSortPlants that plants are both filtered and sorted by title 1`] = `
Array [
  "1",
  "2",
]
`;

exports[`/app/libs/utils metrics should prepare note body and remove unknown metrics 1`] = `
Object {
  "date": 20160101,
  "metrics": Object {
    "harvestCount": 32,
    "harvestStart": true,
    "height": 15.5,
  },
}
`;

exports[`/app/libs/utils plantFromBody that a plant is created from a body 1`] = `
Object {
  "isTerminated": true,
  "plantedDate": 20160505,
  "purchasedDate": 20160404,
  "terminatedDate": 20170228,
}
`;

exports[`/app/libs/utils plantStats that plantStats creates a reasonable result 1`] = `
Object {
  "alive": 3,
  "total": 5,
}
`;

exports[`/app/libs/utils sortNotes should not need to sort notes 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
]
`;

exports[`/app/libs/utils sortNotes should not need to sort notes with missing notes at end 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "5",
  "5",
]
`;

exports[`/app/libs/utils sortNotes should sort notes 1`] = `
Array [
  "1",
  "3",
  "2",
  "4",
]
`;

exports[`/app/libs/utils sortNotes should sort notes with missing notes 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "7",
  "6",
  "6",
  "9",
]
`;

exports[`/app/libs/utils sortPlants should not need to sort plants 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
]
`;

exports[`/app/libs/utils sortPlants should not need to sort plants with missing plants at end 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "5",
  "5",
]
`;

exports[`/app/libs/utils sortPlants should sort plants 1`] = `
Array [
  "1",
  "3",
  "2",
  "4",
]
`;

exports[`/app/libs/utils sortPlants should sort plants with missing plants 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "7",
  "6",
  "6",
  "9",
]
`;
